tests/machine/x/ocaml/in_operator_extended.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/in_operator_extended.ml", line 35, characters 41-42:
35 |   print_endline (__show ((List.mem "ell" s)));
                                              ^
Error: This expression has type string but an expression was expected of type
         string list


Context (around line 35):
  33 |   print_endline (__show ((List.mem_assoc "a" m)));
  34 |   print_endline (__show ((List.mem_assoc "b" m)));
  35 |   print_endline (__show ((List.mem "ell" s)));
  36 |   print_endline (__show ((List.mem "foo" s)));
  37 | 
